5일차 필수 과제

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,16 @@
 .read-the-docs {
   color: #888;
 }
+
+.container {
+  width: 400px;
+  margin: 50px auto;
+  background-color: #fdfdfd;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+}
+.header {
+  text-align: center;
+  color: #333;
+}
